--- a/facepet/package.json
+++ b/facepet/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/fire": "^5.1.0",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/material": "7.0.2",
@@ -25,6 +26,7 @@
     "@fortawesome/fontawesome-free": "5.4.2",
     "bootstrap": "4.1.3",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.6",
     "materialize-css": "1.0.0-rc.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
